<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:card_view="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical"
  android:paddingBottom="@dimen/activity_vertical_margin"
  android:paddingLeft="@dimen/activity_horizontal_margin"
  android:paddingRight="@dimen/activity_horizontal_margin"
  android:paddingTop="@dimen/activity_vertical_margin">

  <TextView
    android:id="@+id/main_textView1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/app_name"
    android:textAppearance="?android:attr/textAppearanceLarge"/>

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <Button
      android:id="@+id/main_button2"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:text="@string/btn_reset"/>

    <Button
      android:id="@+id/main_button1"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:text="@string/btn_parse"/>
  </LinearLayout>

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:visibility="gone">
    <TextView
      android:id="@+id/main_textView2"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/label_url"
      android:textAppearance="?android:attr/textAppearanceMedium"/>
    <EditText
      android:id="@+id/main_editText1"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:hint="@string/hint_url"/>
  </LinearLayout>

  <TableLayout
    android:id="@+id/table"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TableRow>
      <TextView
        android:layout_column="1"
        android:layout_gravity="right"
        android:text="@string/received"
        android:textSize="20sp"/>
      <TextView
        android:layout_gravity="right"
        android:text="@string/sent"
        android:textSize="20sp"/>
    </TableRow>

    <TableRow>
      <TextView
        android:layout_marginRight="@dimen/margin_right"
        android:gravity="right"
        android:text="@string/latest"
        android:textSize="20sp"
        android:textStyle="bold"/>
      <TextView
        android:id="@+id/latest_rx"
        android:layout_marginRight="@dimen/margin_right"
        android:gravity="right"
        android:textSize="20sp"/>

      <TextView
        android:id="@+id/latest_tx"
        android:gravity="right"
        android:textSize="20sp"/>
    </TableRow>

    <TableRow>
      <TextView
        android:layout_marginRight="@dimen/margin_right"
        android:gravity="right"
        android:text="@string/previous"
        android:textSize="20sp"
        android:textStyle="bold"/>

      <TextView
        android:id="@+id/previous_rx"
        android:layout_marginRight="@dimen/margin_right"
        android:gravity="right"
        android:textSize="20sp"/>

      <TextView
        android:id="@+id/previous_tx"
        android:gravity="right"
        android:textSize="20sp"/>
    </TableRow>

    <TableRow>
      <TextView
        android:layout_marginRight="@dimen/margin_right"
        android:gravity="right"
        android:text="@string/delta"
        android:textSize="20sp"
        android:textStyle="bold"/>
      <TextView
        android:id="@+id/delta_rx"
        android:layout_marginRight="@dimen/margin_right"
        android:gravity="right"
        android:textSize="20sp"/>
      <TextView
        android:id="@+id/delta_tx"
        android:gravity="right"
        android:textSize="20sp"/>
    </TableRow>
  </TableLayout>

  <ListView
    android:id="@+id/main_listView1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"/>
</LinearLayout>